test/corpus/types.txt
=========
Types
=========

typedef f64 = double<64>;
typedef u64 = integer<64, false>;

typedef Point = struct {
  x: f64,
  y: f64,
  z: f64
};

typedef PointArray = struct {
  data: &Point,
  length: u64
};

typedef IIIFn = (x: u64, y: u64) -> u64;

typedef Collection = struct {
  length: u64,
  points: [Point]
};

typedef Triple = struct {
  points: [Point, 3]
};

---

(source_file
  (typedef name: (identifier)
           type: (double_type size: (integer)))
  (typedef name: (identifier)
           type: (integer_type size: (integer) signed: (boolean)))
  (typedef name: (identifier)
           type: (struct_type fields: (field_list
             (field name: (identifier) type: (identifier))
             (field name: (identifier) type: (identifier))
             (field name: (identifier) type: (identifier)))))
  (typedef name: (identifier)
           type: (struct_type fields: (field_list
             (field name: (identifier) type: (pointer_type type: (identifier)))
             (field name: (identifier) type: (identifier)))))
  (typedef name: (identifier)
           type: (function_type parameters: (parameter_list (parameter name: (identifier) type: (identifier)) (parameter name: (identifier) type: (identifier)))
                                type: (identifier)))
  (typedef name: (identifier)
           type: (struct_type fields: (field_list
             (field name: (identifier) type: (identifier))
             (field name: (identifier) type: (array_type type: (identifier))))))
  (typedef name: (identifier)
           type: (struct_type fields: (field_list
             (field name: (identifier) type: (array_type type: (identifier) length: (integer)))))))
